feat: init lms-user

--- a/userMicroservice/Makefile
+++ b/userMicroservice/Makefile
@@ -15,3 +15,6 @@ grpc-user:
 
 pg-migrate:
 	migrate -path ./internal/migrations/ -database postgres://postgres:pass@localhost:7777/user?sslmode=disable up
+
+run:
+	go run ./cmd/main.go
