lms-1: change cmd for protoc

--- a/userMicroservice/Makefile
+++ b/userMicroservice/Makefile
@@ -11,7 +11,7 @@ sql-gen:
 	sqlboiler -c etc/config.template.yml -p entity -o internal/repository/pg/entity --struct-tag-casing camel --add-soft-deletes --no-tests --wipe psql
 
 grpc-user:
-	protoc --go_out=. --go_opt=paths=source_relative --go-grpc_out=. --go-grpc_opt=paths=source_relative internal/ports/grpc/user.proto
+	protoc --go_out=. --go-grpc_out=. api/*.proto
 
 pg-migrate:
 	migrate -path ./internal/migrations/ -database postgres://postgres:pass@localhost:7777/user?sslmode=disable up
