--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -27,7 +27,7 @@ jobs:
           go-version: 'stable'
 
       - name: Set up mock
-        run: go install github.com/golang/mock/mockgen@v1.6.
+        run: go install github.com/golang/mock/mockgen@latest
 
       - name: Build
         working-directory: ${{ matrix.work_dir }}
