--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -10,6 +10,26 @@ on:
     branches: [ "main" ]
 
 jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    services:
+      postgres:
+        image: postgres:13
+        ports:
+          - 5432:5432
+        env:
+          POSTGRES_USER: user
+          POSTGRES_PASSWORD: password
+          POSTGRES_DB: user
+        options: >-
+          --health-cmd="pg_isready -U ${{ secrets.POSTGRES_USER }}" 
+          --health-interval=10s 
+          --health-timeout=5s 
+          --health-retries=5
+
+    env:
+      DATABASE_URL: postgres://user:password@localhost:5432/user?sslmode=disable
 
   build:
     runs-on: ubuntu-latest
@@ -32,6 +52,14 @@ jobs:
           go mod tidy
           go build -v ./...
           mockgen -destination=mocks/postgres_mock.go -package=mocks -source=internal/adapters/postgres/interface.go
+
+      - name: Load .env file
+        uses: loads/dotenv-action@v2
+        with:
+          path: .env
+
+      - name: Print environment variable
+        run: echo $DATABASE_URL
 
       - name: Test
         working-directory: ${{ matrix.work_dir }}
