--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -33,7 +33,7 @@ jobs:
           --health-retries=5
 
     env:
-      MY_VARIABLE: ${{ DATABASE_URL.DATABASE_URL }}
+      MY_VARIABLE: ${{ vars.DATABASE_URL }}
 
     steps:
       - uses: actions/checkout@v3
@@ -51,7 +51,7 @@ jobs:
           mockgen -destination=mocks/postgres_mock.go -package=mocks -source=internal/adapters/postgres/interface.go
 
       - name: Print environment variable
-        run: echo MY_VARIABLE
+        run: echo $MY_VARIABLE
 
       - name: Test
         working-directory: ${{ matrix.work_dir }}
