--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -20,17 +20,18 @@ jobs:
 
     services:
       postgres:
-        image: postgres:13
-        ports:
-          - 5432:5432
+        image: postgres
         env:
-          POSTGRES_USER: user
-          POSTGRES_PASSWORD: password
+          POSTGRES_PASSWORD: postgres
+          POSTGRES_USER: postgres
           POSTGRES_DB: user
         options: >-
-          --health-interval=10s 
-          --health-timeout=5s 
-          --health-retries=5
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+        ports:
+          - 5432:5432
 
     env:
       MY_VARIABLE: ${{ vars.DATABASE_URL }}
