--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -34,7 +34,7 @@ jobs:
           - 5432:5432
 
     env:
-      MY_VARIABLE: ${{ env.DATABASE_URL }}
+      MY_VARIABLE: ${{ vars.DATABASE_URL }}
 
     steps:
       - uses: actions/checkout@v3
