--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -55,7 +55,7 @@ jobs:
           mockgen -destination=mocks/postgres_mock.go -package=mocks -source=internal/adapters/postgres/interface.go
 
       - name: Print environment variable
-        run: echo $MY_VARIABLE
+        run: echo ${{ vars.DEPLOY_ENV }}
 
       - name: Test
         working-directory: ${{ matrix.work_dir }}
