--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -47,12 +47,16 @@ jobs:
       - name: Set up mock
         run: go install github.com/golang/mock/mockgen@latest
 
+      - name: set up migrate
+        run: go get -u github.com/golang-migrate/migrate/v4/cmd/migrate
+
       - name: Build
         working-directory: ${{ matrix.work_dir }}
         run: |
           go mod tidy
           go build -v ./...
           mockgen -destination=mocks/postgres_mock.go -package=mocks -source=internal/adapters/postgres/interface.go
+          migrate -path ./internal/migrations/ -database postgres://postgres:password@localhost:5432/user?sslmode=disable up
 
       - name: Print environment variable
         run: echo $MY_VARIABLE
