--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -48,7 +48,7 @@ jobs:
         run: go install github.com/golang/mock/mockgen@latest
 
       - name: set up migrate
-        run: go get -u github.com/golang-migrate/migrate/v4/cmd/migrate
+        run: go install github.com/golang-migrate/migrate/v4/cmd/migrate@latest
 
       - name: Build
         working-directory: ${{ matrix.work_dir }}
