--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -58,8 +58,12 @@ jobs:
           go mod tidy
           go build -v ./...
           mockgen -destination=mocks/postgres_mock.go -package=mocks -source=internal/adapters/postgres/interface.go
-          migrate -path ./internal/migrations/ -database postgres://postgres:password@localhost:5432/user?sslmode=disable up
 
+      - name: Build
+        working-directory: ${{ matrix.work_dir }}
+        run: |
+          migrate -path ./internal/migrations/ -database postgres://postgres:password@localhost:5432/user?sslmode=disable up
+      
       - name: Print environment variable
         run: echo $MY_VARIABLE
 
