--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -59,7 +59,7 @@ jobs:
           go build -v ./...
           mockgen -destination=mocks/postgres_mock.go -package=mocks -source=internal/adapters/postgres/interface.go
 
-      - name: Build
+      - name: migrate db
         working-directory: ${{ matrix.work_dir }}
         run: |
           migrate -path ./internal/migrations/ -database postgres://postgres:password@localhost:5432/user?sslmode=disable up
