--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -52,8 +52,9 @@ jobs:
 
       - name: set up migrate
         run: |
-          go install github.com/golang-migrate/migrate/v4/cmd/migrate@latest
-          go get github.com/golang-migrate/migrate/v4/cmd/migrate@latest
+          curl -s https://packagecloud.io/install/repositories/golang-migrate/migrate/script.deb.sh | sudo bash
+          sudo apt-get update
+          sudo apt-get install migrate
 
       - name: Build
         working-directory: ${{ matrix.work_dir }}
@@ -65,9 +66,9 @@ jobs:
       - name: Print environment variable
         run: echo $MY_VARIABLE
         
-      # - name: migrate db
-      #   working-directory: ${{ matrix.work_dir }}
-      #   run: make pg-migrate
+      - name: migrate db
+        working-directory: ${{ matrix.work_dir }}
+        run: migrate
 
       - name: Test
         working-directory: ${{ matrix.work_dir }}
