--- a/userMicroservice/Makefile
+++ b/userMicroservice/Makefile
@@ -26,4 +26,5 @@ lint-without-fix:
 generate:
 	rm -rf mocks/*
 	mockgen -destination=mocks/postgres_mock.go -package=mocks -source=internal/adapters/postgres/interface.go
+	mockgen -destination=mocks/cloud_mock.go -package=mocks -source=internal/adapters/cloud/inteface.go
 	mockgen -destination=mocks/app_mock.go -package=mocks -source=internal/app/app.go
