--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -62,7 +62,8 @@ jobs:
           go mod tidy
           go build -v ./...
           mockgen -destination=mocks/postgres_mock.go -package=mocks -source=internal/adapters/postgres/interface.go
-      
+          mockgen -destination=mocks/cloud_mock.go -package=mocks -source=internal/adapters/cloud/inteface.go
+          
       - name: Print environment variable
         run: echo $MY_VARIABLE
         
