--- a/.github/workflows/go.yaml
+++ b/.github/workflows/go.yaml
@@ -63,7 +63,8 @@ jobs:
           go build -v ./...
           mockgen -destination=mocks/postgres_mock.go -package=mocks -source=internal/adapters/postgres/interface.go
           mockgen -destination=mocks/cloud_mock.go -package=mocks -source=internal/adapters/storage/interface.go
-          
+          mockgen -destination=mocks/tel_mock.go -package=mocks -source=internal/metrics/face.go
+
       - name: Print environment variable
         run: echo $MY_VARIABLE
         
