--- a/users/Makefile
+++ b/users/Makefile
@@ -11,7 +11,7 @@ sql-gen:
 	sqlboiler -c etc/config.template.yml -p entity -o internal/repository/pg/entity --struct-tag-casing snake --add-soft-deletes --no-tests --wipe psql
 
 grpc-user:
-	protoc --go_out=. --go-grpc_out=. api/*.proto
+	protoc --go_out=. --go-grpc_out=. --grpc-gateway_out=. --proto_path=./api  api/*.proto
 
 pg-migrate:
 	migrate -path ./internal/migrations/ -database postgres://postgres:pass@localhost:7777/user?sslmode=disable up
